<resources>
    <string name="app_name">Pet Care</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Profile</string>
    <string name="delete">Delete Profile</string>
    <string name="title_activity_display_contact">Display Profile</string>
    <string name="name">PetName</string>
    <string name="save">Save</string>
    <string name="petBreed">Breed of Pet</string>
    <string name="image">Image</string>
    <string name="gender">gender</string>
    <string name="petType">Pet Type</string>
    <string name="age">Age(in month)</string>
    <string name="weight">Weight(in kg)</string>
    <string name="deleteProfile">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="CalenderId">CALENDARID</string>

    <string name="backdrop_title">Hii!</string>
    <string name="backdrop_subtitle">Love Pets</string>



    <string-array name="animals_array">
        <item>"All"</item>
        <item>Dog</item>
        <item>Cat</item>
    </string-array>
</resources>